# FastAPI

./: .gitignore  EXERCISES.md  GUIDE.md  README.md  main.py  pyproject.toml
tests/: test_main.py
