[project]
name = "fastapi-learning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
